--- a/_posts/flutter/2023-09-09-flutter引擎编译.md
+++ b/_posts/flutter/2023-09-09-flutter引擎编译.md
@@ -16,10 +16,28 @@ Flutter的源码分为两个部分:
 (2) Engine层：flutter/engine，负责Flutter的渲染以及宿主平台的交互。  
 首先新建一个源码目录, 如flutter_engine。  
 Framework层的代码可以通过git从Github直接下载  
+
 ```
 ~/flutter_engine$ git clone https://github.com/flutter/flutter.git
 ```
-Engine层代码需通过gclient工具获取，gclient工具在depot_tools时中，将depot_tools目录配置到系统Path中就可直接使用。执行以下命令下载引擎代码，引擎代码下载耗时较长  
+Engine层代码需通过gclient工具获取，gclient工具在depot_tools时中，将depot_tools目录配置到系统Path中就可直接使用。
+在源码目录下创建.gclient文件，内容如下
+
+```
+solutions = [
+  {
+    "managed": False,
+    "name": "src/flutter",
+    "url": "https://github.com/flutter/engine.git",
+    "custom_deps": {},
+    "deps_file": "DEPS",
+    "safesync_url": "",
+  },
+]
+```
+
+然后再执行以下命令下载引擎代码，引擎代码下载耗时较长  
+
 ```
 ~/flutter_engine$ gclient sync
 ```
@@ -51,6 +69,8 @@ Framework的版本和Engine的版本是一一对应的, 在Framework代码的bin
 ~/flutter_engine/src/flutter$ gclient sync --with_branch_heads --with_tag
 ```
 ## 3 编译Flutter引擎
+
+
 
 ## 4 开发环境搭建和调试
 ### 4.1 源码阅读环境
